@startuml
'https://plantuml.com/class-diagram

class HeroAircraftShoot{
    + shoot(AbstractAircraft):List<BaseBullet>
}

class HeroAircraftShootWithFire{
    + shoot(AbstractAircraft):List<BaseBullet>
}

interface HeroAircraftShootStrategy{
    + shoot(AbstractAircraft):List<BaseBullet>
}

class HeroAirCraft{
    - heroAircraftShoot:HeroAircraftShootStrategy
    - strategy:HeroAircraftShootStrategy
    + setStrategy():void
    + shoot():List<BaseBullet>
}

HeroAircraftShootStrategy <|.. HeroAircraftShoot
HeroAircraftShootStrategy <|.. HeroAircraftShootWithFire
HeroAircraftShootStrategy o-- HeroAirCraft

@enduml